feat: add Zoom to platform dropdown and 5 SEO articles for Zoom payment services

--- a/index.html
+++ b/index.html
@@ -735,6 +735,7 @@
                             <option value="Notion">Notion</option>
                             <option value="Kie Ai">Kie Ai</option>
                             <option value="OpenAI Api">OpenAI Api</option>
+                            <option value="Zoom">Zoom</option>
                             <option value="Lainnya">Lainnya</option>
                         </select>
                     </div>
