feat: add Zoom articles to sitemap, add testimonials section, fix copyright year

--- a/index.html
+++ b/index.html
@@ -1577,6 +1577,58 @@
         </div>
     </section>
 
+    <!-- Testimonial Section -->
+    <section class="testimonials" style="padding:60px 0;background:#f8fafc;">
+        <div class="container">
+            <h2 class="section-title">Apa Kata Pelanggan Kami</h2>
+            <p style="text-align:center;color:#6c7a89;max-width:600px;margin:0 auto 16px;font-size:15px;">
+                <strong>100+ transaksi berhasil</strong> dengan pelanggan puas dari berbagai platform
+            </p>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:20px;max-width:900px;margin:0 auto;">
+                <div style="background:#fff;padding:24px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);">
+                    <p style="color:#6c7a89;font-size:14px;margin:0 0 12px 0;">"Proses cepat dan aman. Langganan Zoom 1 tahun tanpa ribet kartu kredit!"</p>
+                    <div style="display:flex;align-items:center;gap:10px;">
+                        <div style="width:40px;height:40px;background:#2D8CFF;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:600;">R</div>
+                        <div>
+                            <strong style="font-size:14px;color:#2c3e50;">Rama</strong>
+                            <p style="font-size:12px;color:#95a5a6;margin:0;">Zoom 1 Tahun</p>
+                        </div>
+                    </div>
+                </div>
+                <div style="background:#fff;padding:24px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);">
+                    <p style="color:#6c7a89;font-size:14px;margin:0 0 12px 0;">"Langganan Emergent AI lancar jaya. Admin responsif dan terpercaya!"</p>
+                    <div style="display:flex;align-items:center;gap:10px;">
+                        <div style="width:40px;height:40px;background:#10b981;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:600;">F</div>
+                        <div>
+                            <strong style="font-size:14px;color:#2c3e50;">Fauzi</strong>
+                            <p style="font-size:12px;color:#95a5a6;margin:0;">Emergent AI</p>
+                        </div>
+                    </div>
+                </div>
+                <div style="background:#fff;padding:24px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);">
+                    <p style="color:#6c7a89;font-size:14px;margin:0 0 12px 0;">"Notion 1 tahun untuk tim sudah aktif. Terima kasih dibayar.in!"</p>
+                    <div style="display:flex;align-items:center;gap:10px;">
+                        <div style="width:40px;height:40px;background:#000;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:600;">S</div>
+                        <div>
+                            <strong style="font-size:14px;color:#2c3e50;">Sales Pjk</strong>
+                            <p style="font-size:12px;color:#95a5a6;margin:0;">Notion 1 Tahun</p>
+                        </div>
+                    </div>
+                </div>
+                <div style="background:#fff;padding:24px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);">
+                    <p style="color:#6c7a89;font-size:14px;margin:0 0 12px 0;">"GitHub Copilot aktif dalam hitungan jam. Recommended banget!"</p>
+                    <div style="display:flex;align-items:center;gap:10px;">
+                        <div style="width:40px;height:40px;background:#6e5494;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:600;">S</div>
+                        <div>
+                            <strong style="font-size:14px;color:#2c3e50;">Sapri</strong>
+                            <p style="font-size:12px;color:#95a5a6;margin:0;">GitHub Copilot</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- FAQ SEO Section (long-tail keyword, tetap ringkas) -->
     <section class="faq" style="padding:60px 0;background:#fff;">
         <div class="container">
@@ -1644,7 +1696,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 dibayar.in - Bayar Layanan Internasional Dengan Mudah</p>
+            <p>&copy; 2026 dibayar.in - Bayar Layanan Internasional Dengan Mudah</p>
         </div>
     </footer>
 
