--- a/index.html
+++ b/index.html
@@ -1697,6 +1697,11 @@
     <footer>
         <div class="container">
             <p>&copy; 2026 dibayar.in - Bayar Layanan Internasional Dengan Mudah</p>
+            <p style="margin-top:12px;font-size:13px;">
+                <a href="syarat-ketentuan.html" style="color:#6c7a89;margin-right:16px;">Syarat & Ketentuan</a>
+                <a href="privacy-policy.html" style="color:#6c7a89;margin-right:16px;">Privacy Policy</a>
+                <a href="ketentuan-refund.html" style="color:#6c7a89;">Ketentuan Refund</a>
+            </p>
         </div>
     </footer>
 
