docs: update privacy policy to clarify password handling for certain platforms

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -176,7 +176,7 @@
         </div>
 
         <h1>Privacy Policy</h1>
-        <p class="last-updated">Terakhir diperbarui: 19 Februari 2026</p>
+        <p class="last-updated">Terakhir diperbarui: 20 Februari 2026</p>
 
         <p>dibayar.in ("kami") berkomitmen untuk melindungi privasi dan keamanan data pribadi Anda. Kebijakan privasi ini menjelaskan bagaimana kami mengumpulkan, menggunakan, menyimpan, dan melindungi informasi Anda saat menggunakan layanan kami.</p>
 
@@ -213,9 +213,18 @@
                     <tr>
                         <td>Informasi Akun Tujuan</td>
                         <td>Email akun ChatGPT/Claude/dll</td>
-                        <li>Proses pembayaran</td>
+                        <td>Proses pembayaran</td>
+                    </tr>
+                    <tr>
+                        <td>Kredensial Akun (jika diperlukan)</td>
+                        <td>Password untuk platform tertentu</td>
+                        <td>Login untuk proses pembayaran</td>
                     </tr>
                 </table>
+            </div>
+
+            <div class="highlight-box" style="background:#fff8e6;border-color:#f1c40f;">
+                <p><strong>🔐 Tentang Password:</strong> Untuk platform tertentu yang memerlukan login langsung, kami memerlukan password akun Anda. Kami <strong>menjamin keamanan data</strong> dan <strong>tidak akan menyebarkan</strong> kredensial Anda ke pihak manapun.</p>
             </div>
 
             <h3>1.2 Data Transaksi</h3>
@@ -262,12 +271,19 @@
             <ul>
                 <li>Komunikasi melalui WhatsApp yang terenkripsi end-to-end</li>
                 <li>Pembatasan akses data hanya untuk personel yang berwenang</li>
-                <li>Tidak menyimpan kredensial akun (password) pengguna</li>
+                <li>Kredensial akun (password) dijaga kerahasiaannya dan tidak disebar</li>
+                <li>Password tidak disimpan permanen setelah transaksi selesai</li>
                 <li>Penggunaan koneksi aman untuk transaksi online</li>
             </ul>
 
-            <div class="highlight-box">
-                <p><strong>Catatan:</strong> Kami tidak akan pernah meminta password akun Anda. Untuk pembayaran subscription, kami hanya memerlukan email akun yang terdaftar.</p>
+            <div class="highlight-box" style="background:#f0fff4;border-color:#27ae60;">
+                <p><strong>✅ Jaminan Keamanan Password:</strong> Jika platform memerlukan password untuk login, kami menjamin bahwa:</p>
+                <ul style="margin:8px 0 0 20px;color:#2c3e50;">
+                    <li>Password hanya digunakan untuk keperluan transaksi</li>
+                    <li>Tidak disimpan dalam database permanen</li>
+                    <li>Tidak dibagikan ke pihak ketiga manapun</li>
+                    <li>Dihapus setelah transaksi selesai</li>
+                </ul>
             </div>
         </div>
 
